--- a/index.html
+++ b/index.html
@@ -3,28 +3,147 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel='stylesheet' href='/styles/style.css'>
+  <link rel='stylesheet' href='/styles/normalize.css'>
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img class='logo logo_place_header' src='images/logo_place_header.svg' alt='логотип'>
+      <h1 class='header__title'>Научиться учиться</h1>
+      <h2 class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class='header__link' href='#'>Узнать &rarr;</a></h2>
+      <img alt='тут картинка' src='images/header-image.png' class='header__main-illustration'>
+      <div class='header__square-pic'></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class='two-columns'>
+          <h3 class='two-columns__brief'>Главные проблемы в обучении</h3>
+          <div class='two-columns__main-text'>
+            <p class='two-columns__paragraph'></p>
+            <p class='two-columns__paragraph'><span class='two-columns__span-accent'></span></p>
+            <p class='two-columns__paragraph'></p>
+            <p class='two-columns__paragraph'></p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h2 class='section-title'></h2>
+        <h3 class='section-subtitle'></h3>
+        <div class='table'>
+          <ul>
+            <li class='table__cell'>
+              <h4 class='table__heading'></h4>
+              <p class='table__text'></p>
+            </li>
+            <li class='table__cell'>
+              <h4 class='table__heading'></h4>
+              <p class='table__text'></p></li>
+            <li class='table__cell'>
+              <h4 class='table__heading'></h4>
+              <p class='table__text'></p>
+            </li>
+            <li class='table__cell'>
+              <h4 class='table__heading'></h4>
+              <p class='table__text'></p>
+            </li>
+            <li class='table__cell'>
+              <h4 class='table__heading'></h4>
+              <p class='table__text'></p>
+            </li>
+            <li class='table__cell'>
+              <h4 class='table__heading'></h4>
+              <p class='table__text'></p>
+            </li>
+            <li class='table__cell'>
+              <h4 class='table__heading'></h4>
+              <p class='table__text'></p>
+            </li>
+            <li class='table__cell'>
+              <h4 class='table__heading'></h4>
+              <p class='table__text'></p>
+            </li>
+            <li class='table__cell'>
+              <h4 class='table__heading'></h4>
+              <p class='table__text'></p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="feynman">
+        <h2 class='feynman__title'></h2>
+        <h3 class='feynman__subtitle'></h3>
+        <a class='feynman__link'></a>
       </section>
 
       <section class="kaufman">
+        <h2 class='section-title_theme_dark'></h2>
+        <h3 class='section-subtitle_theme_dark'></h3>
+        <div class='table_theme_dark'>
+          <ul>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'></h4>
+              <p class='table__text_theme_dark'></p>
+            </li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'></h4>
+              <p class='table__text_theme_dark'></p></li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'></h4>
+              <p class='table__text_theme_dark'></p>
+            </li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'></h4>
+              <p class='table__text_theme_dark'></p>
+            </li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'></h4>
+              <p class='table__text_theme_dark'></p>
+            </li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'></h4>
+              <p class='table__text_theme_dark'></p>
+            </li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'></h4>
+              <p class='table__text_theme_dark'></p>
+            </li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'></h4>
+              <p class='table__text_theme_dark'></p>
+            </li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'></h4>
+              <p class='table__text_theme_dark'></p>
+            </li>
+          </ul>
+        </div>
+        <img src='images/kaufman-triangle.svg' alt='тут картинка'>
       </section>
     </main>
     <footer class="footer">
-
+      <div class='footer__columns'>
+        <div class='footer__column_content_copyright'>
+          <img class='logo logo_place_footer' src='images/logo_place_footer.svg' alt='логотип'>
+          <p class='footer__author'></p>
+        </div>
+        <div class='footer__column_content_info'>
+          <h4 class='footer__column-heading'></h4>
+          <div class='footer__column-links'>
+            <a class='footer__column-link'></a>
+            <a class='footer__column-link'></a>
+            <a class='footer__column-link'></a>
+          </div>
+        </div>
+        <div class='footer__column_content_social'>
+          <a class='footer__column-link'></a>
+          <a class='footer__column-link'></a>
+          <a class='footer__column-link'></a>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
