--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' href='/styles/style.css'>
-  <link rel='stylesheet' href='/styles/normalize.css'>
+  <link rel='stylesheet' href='/Users/4739372/dev/how-to-learn/styles/style.css'>
+  <link rel='stylesheet' href='/Users/4739372/dev/how-to-learn/styles/normalize.css'>
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <img class='logo logo_place_header' src='images/logo_place_header.svg' alt='логотип'>
+      <div class='logo logo_place_header'></div>
       <h1 class='header__title'>Научиться учиться</h1>
-      <h2 class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class='header__link' href='#'>Узнать &rarr;</a></h2>
-      <img alt='тут картинка' src='images/header-image.png' class='header__main-illustration'>
+      <h2 class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class='header__link' href='#'>Узнать &rarr;</a></h2>
+      <div class='header__main-illustration'></div>
       <div class='header__square-pic'></div>
     </header>
     <main class="content">
@@ -21,103 +21,108 @@
         <div class='two-columns'>
           <h3 class='two-columns__brief'>Главные проблемы в обучении</h3>
           <div class='two-columns__main-text'>
-            <p class='two-columns__paragraph'></p>
-            <p class='two-columns__paragraph'><span class='two-columns__span-accent'></span></p>
-            <p class='two-columns__paragraph'></p>
-            <p class='two-columns__paragraph'></p>
+            <p class='two-columns__paragraph'>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class='two-columns__paragraph'><span class='two-columns__span-accent'>Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class='two-columns__paragraph'>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
 
       <section class="digits">
-        <h2 class='section-title'></h2>
-        <h3 class='section-subtitle'></h3>
+        <h2 class='section-title'>Цифры и факты</h2>
+        <h3 class='section-subtitle'>Про учёбу и мозг</h3>
         <div class='table'>
           <ul>
             <li class='table__cell'>
-              <h4 class='table__heading'></h4>
-              <p class='table__text'></p>
+              <h4 class='table__heading'>86 миллиардов</h4>
+              <p class='table__text'>Число нейронов в мозге человека</p>
             </li>
             <li class='table__cell'>
-              <h4 class='table__heading'></h4>
-              <p class='table__text'></p></li>
-            <li class='table__cell'>
-              <h4 class='table__heading'></h4>
-              <p class='table__text'></p>
+              <h4 class='table__heading'>2.1 миллиарда</h4>
+              <p class='table__text'>Число нуждающихся в повышении квалификации
+                Всемирный Банк, 2017
+                </p>
             </li>
             <li class='table__cell'>
-              <h4 class='table__heading'></h4>
-              <p class='table__text'></p>
+              <h4 class='table__heading'>1000 терабайт</h4>
+              <p class='table__text'>Объём памяти человека</p>
             </li>
             <li class='table__cell'>
-              <h4 class='table__heading'></h4>
-              <p class='table__text'></p>
+              <h4 class='table__heading'>500 триллионов</h4>
+              <p class='table__text'>Число ответственных за обучение нервных синапсов у взрослого человека</p>
             </li>
             <li class='table__cell'>
-              <h4 class='table__heading'></h4>
-              <p class='table__text'></p>
+              <h4 class='table__heading'>420 миллионов</h4>
+              <p class='table__text'>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+                Всемирный Банк, 2017
+                </p>
             </li>
             <li class='table__cell'>
-              <h4 class='table__heading'></h4>
-              <p class='table__text'></p>
+              <h4 class='table__heading'>17–20 лет</h4>
+              <p class='table__text'>Пик обучаемости</p>
             </li>
             <li class='table__cell'>
-              <h4 class='table__heading'></h4>
-              <p class='table__text'></p>
+              <h4 class='table__heading'>1885 год</h4>
+              <p class='table__text'>Открытие кривой забывания</p>
             </li>
             <li class='table__cell'>
-              <h4 class='table__heading'></h4>
-              <p class='table__text'></p>
+              <h4 class='table__heading'>1889 год</h4>
+              <p class='table__text'>Открытие условного рефлекса</p>
             </li>
           </ul>
         </div>
       </section>
 
       <section class="feynman">
-        <h2 class='feynman__title'></h2>
-        <h3 class='feynman__subtitle'></h3>
-        <a class='feynman__link'></a>
+        <h2 class='feynman__title'>Метод Фейнмана</h2>
+        <h3 class='feynman__subtitle'>Выучить и не забыть</h3>
+        <a href='#' class='feynman__link'>Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
-        <h2 class='section-title_theme_dark'></h2>
-        <h3 class='section-subtitle_theme_dark'></h3>
+        <h2 class='section-title_theme_dark'>Принципы обучения</h2>
+        <h3 class='section-subtitle_theme_dark'>от Джоша Кауфмана</h3>
         <div class='table_theme_dark'>
           <ul>
             <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'></h4>
-              <p class='table__text_theme_dark'></p>
+              <h4 class='table__heading_theme_dark'>1</h4>
+              <p class='table__text_theme_dark'>Выберите привлекательный проект.</p>
             </li>
             <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'></h4>
-              <p class='table__text_theme_dark'></p></li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'></h4>
-              <p class='table__text_theme_dark'></p>
+              <h4 class='table__heading_theme_dark'>2</h4>
+              <p class='table__text_theme_dark'>Сосредоточьтесь на каком-то одном навыке.</p>
             </li>
             <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'></h4>
-              <p class='table__text_theme_dark'></p>
+              <h4 class='table__heading_theme_dark'>3</h4>
+              <p class='table__text_theme_dark'>Определите целевой уровень мастерства.</p>
             </li>
             <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'></h4>
-              <p class='table__text_theme_dark'></p>
+              <h4 class='table__heading_theme_dark'>4</h4>
+              <p class='table__text_theme_dark'>Разбейте навык на элементы.</p>
             </li>
             <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'></h4>
-              <p class='table__text_theme_dark'></p>
+              <h4 class='table__heading_theme_dark'>5</h4>
+              <p class='table__text_theme_dark'>Приготовьте всё необходимое для занятий.</p>
             </li>
             <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'></h4>
-              <p class='table__text_theme_dark'></p>
+              <h4 class='table__heading_theme_dark'>6</h4>
+              <p class='table__text_theme_dark'>Устраните препятствия для занятий.</p>
             </li>
             <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'></h4>
-              <p class='table__text_theme_dark'></p>
+              <h4 class='table__heading_theme_dark'>7</h4>
+              <p class='table__text_theme_dark'>Выделите специальное время для занятий.</p>
             </li>
             <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'></h4>
-              <p class='table__text_theme_dark'></p>
+              <h4 class='table__heading_theme_dark'>8</h4>
+              <p class='table__text_theme_dark'>Создайте быстрые петли обратной связи.</p>
+            </li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'>9</h4>
+              <p class='table__text_theme_dark'>Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </li>
+            <li class='table__cell_theme_dark'>
+              <h4 class='table__heading_theme_dark'>10</h4>
+              <p class='table__text_theme_dark'>Уделяйте внимание количеству и скорости.</p>
             </li>
           </ul>
         </div>
@@ -128,20 +133,21 @@
       <div class='footer__columns'>
         <div class='footer__column_content_copyright'>
           <img class='logo logo_place_footer' src='images/logo_place_footer.svg' alt='логотип'>
-          <p class='footer__author'></p>
+          <p class='footer__author'>&copy; 2021. Дарья Корнилова</p>
         </div>
         <div class='footer__column_content_info'>
-          <h4 class='footer__column-heading'></h4>
+          <h4 class='footer__column-heading'>О Практикуме</h4>
           <div class='footer__column-links'>
-            <a class='footer__column-link'></a>
-            <a class='footer__column-link'></a>
-            <a class='footer__column-link'></a>
+            <a href='#' class='footer__column-link'>Главная</a>
+            <a href='#' class='footer__column-link'>Концепция</a>
+            <a href='#' class='footer__column-link'>Наставники</a>
           </div>
         </div>
         <div class='footer__column_content_social'>
-          <a class='footer__column-link'></a>
-          <a class='footer__column-link'></a>
-          <a class='footer__column-link'></a>
+          <h4 class='footer__column-heading'>Соцсети</h4>
+          <a href='#' class='footer__column-link'>Facebook</a>
+          <a href='#' class='footer__column-link'>ВКонтакте</a>
+          <a href='#' class='footer__column-link'>Instagram</a>
         </div>
       </div>
     </footer>
