--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
       <section class="digits">
         <h2 class='section-title'>Цифры и факты</h2>
         <h3 class='section-subtitle'>Про учёбу и мозг</h3>
-        <div class='table'>
-          <ul>
+          <ul class='table'>
             <li class='table__cell'>
               <h4 class='table__heading'>86 миллиардов</h4>
               <p class='table__text'>Число нейронов в мозге человека</p>
             </li>
             <li class='table__cell'>
               <h4 class='table__heading'>2.1 миллиарда</h4>
-              <p class='table__text'>Число нуждающихся в повышении квалификации
-                Всемирный Банк, 2017
-                </p>
+              <p class='table__text'>Число нуждающихся в повышении квалификации</p>
+              <p class='table__text'>Всемирный Банк, 2017</p>
             </li>
             <li class='table__cell'>
               <h4 class='table__heading'>1000 терабайт</h4>
@@ -53,9 +51,8 @@
             </li>
             <li class='table__cell'>
               <h4 class='table__heading'>420 миллионов</h4>
-              <p class='table__text'>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
-                Всемирный Банк, 2017
-                </p>
+              <p class='table__text'>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class='table__text'>Всемирный Банк, 2017</p>
             </li>
             <li class='table__cell'>
               <h4 class='table__heading'>17–20 лет</h4>
@@ -70,7 +67,6 @@
               <p class='table__text'>Открытие условного рефлекса</p>
             </li>
           </ul>
-        </div>
       </section>
 
       <section class="feynman">
