--- a/index.html
+++ b/index.html
@@ -78,57 +78,55 @@
       <section class="kaufman">
         <h2 class='section-title_theme_dark'>Принципы обучения</h2>
         <h3 class='section-subtitle_theme_dark'>от Джоша Кауфмана</h3>
-        <div class='table_theme_dark'>
-          <ul>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>1</h4>
-              <p class='table__text_theme_dark'>Выберите привлекательный проект.</p>
+          <ul class='table'>
+            <li class='table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>1</h4>
+              <p class='table__text table__text_theme_dark'>Выберите привлекательный проект.</p>
             </li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>2</h4>
-              <p class='table__text_theme_dark'>Сосредоточьтесь на каком-то одном навыке.</p>
+            <li class='table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>2</h4>
+              <p class='table__text table__text_theme_dark'>Сосредоточьтесь на каком-то одном навыке.</p>
             </li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>3</h4>
-              <p class='table__text_theme_dark'>Определите целевой уровень мастерства.</p>
+            <li class=' table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>3</h4>
+              <p class='table__text table__text_theme_dark'>Определите целевой уровень мастерства.</p>
             </li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>4</h4>
-              <p class='table__text_theme_dark'>Разбейте навык на элементы.</p>
+            <li class='table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>4</h4>
+              <p class='table__text table__text_theme_dark'>Разбейте навык на элементы.</p>
             </li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>5</h4>
-              <p class='table__text_theme_dark'>Приготовьте всё необходимое для занятий.</p>
+            <li class='table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>5</h4>
+              <p class='table__text table__text_theme_dark'>Приготовьте всё необходимое для занятий.</p>
             </li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>6</h4>
-              <p class='table__text_theme_dark'>Устраните препятствия для занятий.</p>
+            <li class='table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>6</h4>
+              <p class='table__text table__text_theme_dark'>Устраните препятствия для занятий.</p>
             </li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>7</h4>
-              <p class='table__text_theme_dark'>Выделите специальное время для занятий.</p>
+            <li class='table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>7</h4>
+              <p class='table__text table__text_theme_dark'>Выделите специальное время для занятий.</p>
             </li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>8</h4>
-              <p class='table__text_theme_dark'>Создайте быстрые петли обратной связи.</p>
+            <li class='table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>8</h4>
+              <p class='table__text table__text_theme_dark'>Создайте быстрые петли обратной связи.</p>
             </li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>9</h4>
-              <p class='table__text_theme_dark'>Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <li class='table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>9</h4>
+              <p class='table__text table__text_theme_dark'>Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </li>
-            <li class='table__cell_theme_dark'>
-              <h4 class='table__heading_theme_dark'>10</h4>
-              <p class='table__text_theme_dark'>Уделяйте внимание количеству и скорости.</p>
+            <li class='table__cell table__cell_theme_dark'>
+              <h4 class='table__heading table__heading_theme_dark'>10</h4>
+              <p class='table__text table__text_theme_dark'>Уделяйте внимание количеству и скорости.</p>
             </li>
           </ul>
-        </div>
-        <img src='images/kaufman-triangle.svg' alt='тут картинка'>
+          <img class='kaufman__triangle' alt='тут картинка' src='/Users/4739372/dev/how-to-learn/images/kaufman-triangle.svg'>
       </section>
     </main>
     <footer class="footer">
       <div class='footer__columns'>
         <div class='footer__column_content_copyright'>
-          <img class='logo logo_place_footer' src='images/logo_place_footer.svg' alt='логотип'>
+          <div class='logo logo_place_footer'></div>
           <p class='footer__author'>&copy; 2021. Дарья Корнилова</p>
         </div>
         <div class='footer__column_content_info'>
@@ -141,9 +139,12 @@
         </div>
         <div class='footer__column_content_social'>
           <h4 class='footer__column-heading'>Соцсети</h4>
-          <a href='#' class='footer__column-link'>Facebook</a>
-          <a href='#' class='footer__column-link'>ВКонтакте</a>
-          <a href='#' class='footer__column-link'>Instagram</a>
+          <a href='#' class='footer__column-link'>
+            <img class='footer__social-icon' alt='facebook icon' src='/Users/4739372/dev/how-to-learn/images/facebook_color_white.svg'> Facebook</a>
+          <a href='#' class='footer__column-link'>
+            <img class='footer__social-icon' alt='facebook icon' src='/Users/4739372/dev/how-to-learn/images/vk_color_white.svg'> ВКонтакте</a>
+          <a href='#' class='footer__column-link'>
+            <img class='footer__social-icon' alt='facebook icon' src='/Users/4739372/dev/how-to-learn/images/instagram_color_white.svg'> Instagram</a>
         </div>
       </div>
     </footer>
