--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' href='/Users/4739372/dev/how-to-learn/styles/style.css'>
-  <link rel='stylesheet' href='/Users/4739372/dev/how-to-learn/styles/normalize.css'>
+  <link rel='stylesheet' href='./styles/style.css'>
+  <link rel='stylesheet' href='./styles/normalize.css'>
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -21,9 +21,14 @@
         <div class='two-columns'>
           <h3 class='two-columns__brief'>Главные проблемы в обучении</h3>
           <div class='two-columns__main-text'>
-            <p class='two-columns__paragraph'>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class='two-columns__paragraph'><span class='two-columns__span-accent'>Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class='two-columns__paragraph'>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class='two-columns__paragraph'>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+              Мы готовимся к экзаменам и учим билеты.
+              Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+              Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class='two-columns__paragraph'><span class='two-columns__span-accent'>Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат.
+              Что с этим делать?</p>
+            <p class='two-columns__paragraph'>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
+              Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
@@ -120,7 +125,7 @@
               <p class='table__text table__text_theme_dark'>Уделяйте внимание количеству и скорости.</p>
             </li>
           </ul>
-          <img class='kaufman__triangle' alt='тут картинка' src='/Users/4739372/dev/how-to-learn/images/kaufman-triangle.svg'>
+          <img class='kaufman__triangle' alt='тут картинка' src='./images/kaufman-triangle.svg'>
       </section>
     </main>
     <footer class="footer">
@@ -140,11 +145,11 @@
         <div class='footer__column_content_social'>
           <h4 class='footer__column-heading'>Соцсети</h4>
           <a href='#' class='footer__column-link'>
-            <img class='footer__social-icon' alt='facebook icon' src='/Users/4739372/dev/how-to-learn/images/facebook_color_white.svg'> Facebook</a>
+            <img class='footer__social-icon' alt='facebook icon' src='./images/facebook_color_white.svg'> Facebook</a>
           <a href='#' class='footer__column-link'>
-            <img class='footer__social-icon' alt='facebook icon' src='/Users/4739372/dev/how-to-learn/images/vk_color_white.svg'> ВКонтакте</a>
+            <img class='footer__social-icon' alt='facebook icon' src='./images/vk_color_white.svg'> ВКонтакте</a>
           <a href='#' class='footer__column-link'>
-            <img class='footer__social-icon' alt='facebook icon' src='/Users/4739372/dev/how-to-learn/images/instagram_color_white.svg'> Instagram</a>
+            <img class='footer__social-icon' alt='facebook icon' src='./images/instagram_color_white.svg'> Instagram</a>
         </div>
       </div>
     </footer>
